# test-kafka

./: Cargo.toml
src/: consumer.rs  producer.rs
